TradeMarketing/force-app/main/default/objects/eOne_RTDS_Settings__c/eOne_RTDS_Settings__c.object-meta.xml
<CustomObject>
    <description>Settings table for SmartConnect Real Time Data Sources</description>
    <label>eOne Realtime Data Source Settings</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Source Entity</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SC Id</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>