TradeMarketing/force-app/main/default/objects/eOne_RTDS_Settings__c/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <description>The domain required to connect to SmartConnect REST web service</description>
    <label>Service Domain</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>