TradeMarketing/force-app/main/default/objects/eOne_RTDS_Settings__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <description>The password required to connect to SmartConnect REST web service</description>
    <label>Service Password</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>