TradeMarketing/force-app/main/default/objects/eOne_RTDS_Settings__c/fields/Url__c.field-meta.xml
<CustomField>
    <fullName>Url__c</fullName>
    <description>The url of the SmartConnect REST web service</description>
    <label>Service Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>