TradeMarketing/force-app/main/default/objects/eOne_RTDS_Settings__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <description>The username required to connect to SmartConnect REST web service</description>
    <label>Service Username</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>